# koku-desktop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.cursor/rules/: rebuild.mdc
.github/workflows/: build.yml
about/: index.html
docs/: architecture.md  index.html
scripts/: build-ui.sh  stamp-version.sh
settings/: index.html
splash/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend-stub/: index.html
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: cli.rs  config.rs  main.rs  proxy.rs
src-tauri/src/auth/: dev.rs  mod.rs  offline_token.rs  oidc.rs  password.rs  service_account.rs
