[package]
name = "koku-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
keyring = "3"
os_info = "3"
dirs = "6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
http = "1"
mime_guess = "2"
log = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
